--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Swiggy App</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="root"></div>
+    <script type="module" src="App.js"></script>
 </body>
 </html>
